--- a/index.ipynb
+++ b/index.ipynb
@@ -196,14 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return restaurant['name']\n",
-    "    \n",
-    "    pass"
+    "    return restaurant['name']"
    ]
   },
   {
