--- a/index.ipynb
+++ b/index.ipynb
@@ -258,8 +258,7 @@
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    re\n",
-    "    pass"
+    "    return restaurant['rating'] pass"
    ]
   },
   {
