--- a/index.ipynb
+++ b/index.ipynb
@@ -409,8 +409,10 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    \n",
-    "    pass"
+    "    if restaurant['rating'] >= alternative['rating']:\n",
+    "        return True\n",
+    "    else: \n",
+    "        return False"
    ]
   },
   {
