Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -489,10 +489,11 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "        if restaurant['rating'] >= rating:\n",
+    "        if restaurant['rating'] >= rating['rating']:\n",
     "        return True\n",
-    " else: \n",
-    "    return False\n"
+    "    else: \n",
+    "        return False\n",
+    "    pass"
    ]
   },
   {
